--- a/ui/chooser/index.html
+++ b/ui/chooser/index.html
@@ -30,11 +30,11 @@
         <p>Which UI do you want to use?</p>
         <div class="ui">
             <article>
-                <a href="mlflow"><button>Classic</button></a>
+                <a href="/mlflow/"><button>Classic</button></a>
                 <p>This is the classic MLFlow UI, albeit fast and responsive.</p>
             </article>
             <article>
-                <a href="aim"><button>Modern</button></a>
+                <a href="/aim/"><button>Modern</button></a>
                 <p>This is the modern Aim UI, much faster than MLFlow.</p>
             </article>
         </div>
