--- a/pkg/ui/chooser/embed/index.html
+++ b/pkg/ui/chooser/embed/index.html
@@ -26,15 +26,16 @@
     </header>
     </div>
 
+    <!-- We load the UI with JS to avoid issues when an URL with embedded credentials is used -->
     <main>
         <p>Which UI do you want to use?</p>
         <div class="ui">
             <article>
-                <a href="/mlflow/"><button>Classic</button></a>
+                <a href="#" onclick="window.location = window.location.origin + '/mlflow/'"><button>Classic</button></a>
                 <p>This is the classic MLFlow UI, albeit fast and responsive.</p>
             </article>
             <article>
-                <a href="/aim/"><button>Modern</button></a>
+                <a href="#" onclick="window.location = window.location.origin + '/aim/'"><button>Modern</button></a>
                 <p>This is the modern Aim UI, much faster than MLFlow.</p>
             </article>
         </div>
