Rename to FastTrackML

--- a/pkg/ui/chooser/embed/index.html
+++ b/pkg/ui/chooser/embed/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>fasttrack</title>
+    <title>FastTrackML</title>
     <link rel="stylesheet" href="simple.min.css">
     <style>
         main {
@@ -21,7 +21,7 @@
 
 <body>
     <header>
-        <h1><i>fasttrack</i></h1>
+        <h1><i>FastTrackML</i></h1>
         <p>A <i>very fast</i> experiment tracker</p>
     </header>
     </div>
