Add FastTrackML logo to chooser-ui-darkmode (#135)

--- a/pkg/ui/chooser/embed/index.html
+++ b/pkg/ui/chooser/embed/index.html
@@ -16,11 +16,20 @@
             grid-template-columns: 1fr 1fr;
             column-gap: 2rem;
         }
+
+        .logo {
+            display: block;
+            width: 250px;
+            height: auto;
+        }
     </style>
 </head>
 
 <body>
     <header>
+
+        <img class="logo" src="logo/project-logo-dark.svg" alt="full logo">
+
         <h1><i>FastTrackML</i></h1>
         <p>A <i>very fast</i> experiment tracker</p>
     </header>
