Add favicon to chooser ui (#135)

--- a/pkg/ui/chooser/embed/index.html
+++ b/pkg/ui/chooser/embed/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FastTrackML</title>
     <link rel="stylesheet" href="simple.min.css">
+    <link rel="icon" type="image/x-icon" href="logo/favicon.ico">
     <style>
         main {
             text-align: center;
