Add FastTrackML project logo in Chooser UI (#135)

--- a/pkg/ui/chooser/embed/index.html
+++ b/pkg/ui/chooser/embed/index.html
@@ -28,9 +28,6 @@
 
 <body>
     <header>
-
-        <img class="logo" src="logo/project-logo-dark.svg" alt="full logo">
-
         <h1><i>FastTrackML</i></h1>
         <p>A <i>very fast</i> experiment tracker</p>
     </header>
@@ -55,6 +52,8 @@
         <p>Brought to you by <a href="https://opensource.gresearch.co.uk" target="_blank">G-Research Open-Source</a>.
         </p>
     </footer>
+
+    <script src="index.js"></script>
 </body>
 
 </html>
