--- a/pkg/ui/chooser/embed/index.html
+++ b/pkg/ui/chooser/embed/index.html
@@ -22,16 +22,30 @@
             display: block;
             width: 250px;
             height: auto;
+            position: absolute;
+            left: 20px;
+            top: 20px;
+        }
+
+        .title {
+            text-align: center;
+            margin-top: 40px;
         }
     </style>
 </head>
 
 <body>
     <header>
-        <h1><i>FastTrackML</i></h1>
-        <p>A <i>very fast</i> experiment tracker</p>
+        <picture>
+            <source media="(prefers-color-scheme: dark)" srcset="logo/project-logo-dark.svg">
+            <img class="logo" src="logo/project-logo-light.svg" alt="full logo">
+        </picture>
+
+        <div class="title">
+            <h1><i>FastTrackML</i></h1>
+            <p>A <i>very fast</i> experiment tracker</p>
+        </div>
     </header>
-    </div>
 
     <!-- We load the UI with JS to avoid issues when an URL with embedded credentials is used -->
     <main>
@@ -52,8 +66,6 @@
         <p>Brought to you by <a href="https://opensource.gresearch.co.uk" target="_blank">G-Research Open-Source</a>.
         </p>
     </footer>
-
-    <script src="index.js"></script>
 </body>
 
 </html>
