--- a/pkg/ui/chooser/embed/index.html
+++ b/pkg/ui/chooser/embed/index.html
@@ -18,31 +18,31 @@
             column-gap: 2rem;
         }
 
-        .logo {
-            display: block;
-            width: 250px;
-            height: auto;
-            position: absolute;
-            left: 20px;
-            top: 20px;
+        header {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            text-align: center;
         }
 
-        .title {
-            text-align: center;
-            margin-top: 40px;
+        .logo {
+            max-width: 100%;
+            height: 100%;
+        }
+
+        .title p {
+            margin-top: -25px;
         }
     </style>
 </head>
 
 <body>
     <header>
-        <picture>
-            <source media="(prefers-color-scheme: dark)" srcset="logo/project-logo-dark.svg">
-            <img class="logo" src="logo/project-logo-light.svg" alt="full logo">
-        </picture>
-
         <div class="title">
-            <h1><i>FastTrackML</i></h1>
+            <picture>
+                <source media="(prefers-color-scheme: dark)" srcset="logo/project-logo-dark.svg">
+                <img class="logo" src="logo/project-logo-light.svg" alt="full logo">
+            </picture>
             <p>A <i>very fast</i> experiment tracker</p>
         </div>
     </header>
