Modify header styles (#216)

--- a/pkg/ui/chooser/embed/index.html
+++ b/pkg/ui/chooser/embed/index.html
@@ -22,16 +22,15 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            text-align: center;
         }
 
         .logo {
-            max-width: 100%;
-            height: 100%;
+            height: 150px;
+            margin-top: -25px;
         }
 
         .title p {
-            margin-top: -25px;
+            margin-top: -35px;
         }
     </style>
 </head>
