initial bits for html template rendering

--- a/pkg/ui/chooser/embed/index.html
+++ b/pkg/ui/chooser/embed/index.html
@@ -39,6 +39,7 @@
                 <p>This is the modern Aim UI, much faster than MLFlow.</p>
             </article>
         </div>
+        <p><a href="#" onclick="window.location = window.location.origin + '/admin/ns/'">Manage namespaces</a></p>
     </main>
 
     <footer>
