creating namespace section

--- a/pkg/ui/chooser/embed/index.html
+++ b/pkg/ui/chooser/embed/index.html
@@ -52,6 +52,7 @@
                 <p>This is the modern Aim UI, much faster than MLFlow.</p>
             </article>
         </div>
+        <p><a href="#" onclick="window.location = window.location.origin + '/ns/'">Manage namespaces</a></p>
     </main>
 
     <footer>
