--- a/pkg/ui/chooser/embed/admin/ns/index.html
+++ b/pkg/ui/chooser/embed/admin/ns/index.html
@@ -1,32 +1,39 @@
 <html>
-<head>
+  <head>
     <title>Namespaces</title>
-</head>
-<body>
-<h1>Namespaces</h1>
-{{ if gt (len .ErrorMessage) 0 }}
-<p style="color: darkred">{{ .ErrorMessage}}</p>
-{{ end }}
-{{ if gt (len .SuccessMessage) 0 }}
-<p style="color: darkgreen">{{ .SuccessMessage }}</p>
-{{ end }}
-<table>
-    <thead>
-        <tr>
-            <th>ID</th>
-            <th>Code</th>
-        </tr>
-    </thead>
-    <tbody>
-    {{ range .Data }}
-    <tr>
-        <td>{{ .id }}</td>
-        <td>{{ .code }}</td>
-    </tr>
+    <link rel="stylesheet" href="">
+    
+    
+  </head>
+  <body>
+    <h1>Namespaces</h1>
+    {{ if gt (len .ErrorMessage) 0 }}
+    <p style="color: darkred">{{ .ErrorMessage}}</p>
     {{ end }}
-    </tbody>
-</table>
+    {{ if gt (len .SuccessMessage) 0 }}
+    <p style="color: darkgreen">{{ .SuccessMessage }}</p>
+    {{ end }}
+    <table>
+      <thead>
+        <tr>
+          <th>ID</th>
+          <th>Code</th>
+          <th>Description</th>
+          <th>Created At</th>
+        </tr>
+      </thead>
+      <tbody>
+	{{ range .Data }}
+	<tr>
+          <td>{{ .id }}</td>
+          <td>{{ .code }}</td>
+          <td>{{ .description }}</td>
+          <td>{{ .created_at }}</td>
+	</tr>
+	{{ end }}
+      </tbody>
+    </table>
 
-</body>
+  </body>
 </html>
 
