--- a/pkg/ui/chooser/embed/ns/index.html
+++ b/pkg/ui/chooser/embed/ns/index.html
@@ -1,17 +1,24 @@
 <html>
 <head>
     <title>Namespaces</title>
-    <link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.css" />
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"   integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="   crossorigin="anonymous"></script>
-    <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.js"></script>
+    <link rel="stylesheet" href="/static/css/jquery.dataTables.min.css">
+    <script type="text/javascript" language="javascript" src="/static/js/jquery-3.7.0.js"></script>
+    <script type="text/javascript" language="javascript" src="/static/js/jquery.dataTables.min.js"></script>
+    <script type="text/javascript" language="javascript">
+      $( document ).ready(function() {
+         new DataTable('#namespaces');        
+      });
+    </script>
 </head>
 <body>
     <h1>Namespaces</h1>
-    <table class="display">
+    <table id="namespaces">
         <thead>
             <tr>
                 <th>ID</th>
                 <th>Code</th>
+                <th>Description</th>
+                <th>Creation time</th>
             </tr>
         </thead>
         <tbody>
@@ -19,14 +26,11 @@
             <tr>
                 <td>{{ .ID }}</td>
                 <td><a href="#">{{ .code }}</a></td>
+                <td>{{ .Description }}</td>
+                <td>{{ .CreatedAt }}</td>
             </tr>
             {{ end }}
         </tbody>
     </table>
-    <script>
-    $(document).ready(function(){
-        $('.display').DataTable();
-    });
-    </script>
 </body>
 </html>
