--- a/pkg/ui/chooser/embed/admin/ns/index.html
+++ b/pkg/ui/chooser/embed/admin/ns/index.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="/static/css/jquery.dataTables.min.css">
     <script type="text/javascript" language="javascript" src="/static/js/jquery-3.7.0.js"></script>
     <script type="text/javascript" language="javascript" src="/static/js/jquery.dataTables.min.js"></script>
+    <script type="text/javascript" language="javascript" src="/static/js/namespaces.js"></script>
     <script type="text/javascript" language="javascript">
       $( document ).ready(function() {
          new DataTable('#namespaces');        
@@ -25,6 +26,7 @@
           <th>Code</th>
           <th>Description</th>
           <th>Created At</th>
+          <th>Actions</th>
         </tr>
       </thead>
       <tbody>
@@ -34,12 +36,15 @@
           <td>{{ .Code }}</td>
           <td>{{ .Description }}</td>
           <td>{{ .CreatedAt }}</td>
+	  <td>
+	    <a href="#" onclick="editNamespace('{{ .ID }}')">Edit</a>
+	    <a href="#" onclick="deleteNamespace('{{ .ID }}')">Delete</a> 
 	</tr>
 	{{ end }}
       </tbody>
     </table>
 
-    <p><a href="#" onclick="window.location = window.location.origin + '/admin/ns/create.html'">Create new namespace</a></p>
+    <p><a href="#" onclick="createNamespace()">Create new namespace</a></p>
 
   </body>
 </html>
