Add header and form grid

--- a/pkg/ui/chooser/embed/admin/ns/create.html
+++ b/pkg/ui/chooser/embed/admin/ns/create.html
@@ -1,12 +1,22 @@
 <h1>Create Namespace</h1>
 {{ template "partials/messages" . }}
 <form action="/admin/ns" method="post">
-    <label for="code">Code:</label>
-    <input type="text" id="code" name="code" required><br><br>
-
-    <label for="description">Description:</label>
-    <input type="text" id="description" name="description"><br><br>
-
-    <input type="submit" value="Create">
+  <div id="form-grid">
+    <div>
+      <label for="code">Code:</label>
+    </div>
+    <div>
+      <input type="text" id="code" name="code" required>
+    </div>
+    <div>
+      <label for="description">Description:</label>
+    </div>
+    <div>
+      <input type="text" id="description" name="description">
+    </div>
+    <div>	 
+      <input type="submit" value="Create">
+    </div>
+  </div>
 </form>
 
