--- a/pkg/ui/chooser/embed/admin/ns/update.html
+++ b/pkg/ui/chooser/embed/admin/ns/update.html
@@ -5,16 +5,28 @@
 </script>
 <h1>Update Namespace</h1>
 {{ template "partials/messages" . }}
-<form action="/admin/ns/{{ .ID }}" method="post" id="updateForm">
-    <label for="id">ID:</label>
-    <input type="text" id="id" name="id" readonly value="{{ .ID }}" edi><br><br>
-
-    <label for="code">Code:</label>
-    <input type="text" id="code" name="code" required value="{{ .Code }}"><br><br>
-
-    <label for="description">Description:</label>
-    <input type="text" id="description" name="description" value="{{ .Description }}"><br><br>
-
-    <input type="submit" value="Save">
+<form action="#" method="post" id="updateForm">
+  <div id="form-grid">
+    <div>
+      <label for="id">ID:</label>
+    </div>
+    <div>
+      <input type="text" id="id" name="id" readonly value="{{ .ID }}">
+    </div>
+    <div>
+      <label for="code">Code:</label>
+    </div>
+    <div>
+      <input type="text" id="code" name="code" required value="{{ .Code }}">
+    </div>
+    <div>
+      <label for="description">Description:</label>
+    </div>
+    <div>
+      <input type="text" id="description" name="description" value="{{ .Description }}">
+    </div>
+    <div>	 
+      <input type="submit" value="Save">
+    </div>
+  </div>
 </form>
-
