--- a/pkg/ui/chooser/embed/index.html
+++ b/pkg/ui/chooser/embed/index.html
@@ -5,13 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FastTrackML</title>
-    <link rel="stylesheet" href="static/css/simple.min.css">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="stylesheet" href="/static/chooser/simple.min.css">
     <style>
-        :root {
-            --accent: #00a4e0;
-        }
-
         main {
             text-align: center;
         }
@@ -21,45 +16,41 @@
             grid-template-columns: 1fr 1fr;
             column-gap: 2rem;
         }
-
-        .logo {
-            height: 150px;
-            margin-top: -25px;
-            margin-bottom: -50px;
-        }
     </style>
 </head>
 
 <body>
-    <header>
-        <picture>
-            <source media="(prefers-color-scheme: dark)" srcset="static/media/logo-dark.svg">
-            <img class="logo" src="static/media/logo-light.svg" alt="FastTrackML logo">
-        </picture>
-        <p>A <i>very fast</i> experiment tracker</p>
-    </header>
+<header>
+    <h1><i>FastTrackML</i></h1>
+    <p>A <i>very fast</i> experiment tracker</p>
+</header>
+</div>
 
-    <!-- We load the UI with JS to avoid issues when an URL with embedded credentials is used -->
-    <main>
-        <p>Which UI do you want to use?</p>
-        <div class="ui">
-            <article>
-                <a href="#"
-                    onclick="window.location = window.location.origin + window.location.pathname + 'mlflow/'"><button>Classic</button></a>
-                <p>This is the classic MLFlow UI, albeit fast and responsive.</p>
-            </article>
-            <article>
-                <a href="#"
-                    onclick="window.location = window.location.origin + window.location.pathname + 'aim/'"><button>Modern</button></a>
-                <p>This is the modern Aim UI, much faster than MLFlow.</p>
-            </article>
-        </div>
-    </main>
+<!-- We load the UI with JS to avoid issues when an URL with embedded credentials is used -->
+<main>
+    <p>Which UI do you want to use?</p>
+    <div class="ui">
+        <article>
+            <a href="#"
+               onclick="window.location = window.location.origin + window.location.pathname + 'mlflow/'">
+                <button>Classic</button>
+            </a>
+            <p>This is the classic MLFlow UI, albeit fast and responsive.</p>
+        </article>
+        <article>
+            <a href="#"
+               onclick="window.location = window.location.origin + window.location.pathname + 'aim/'">
+                <button>Modern</button>
+            </a>
+            <p>This is the modern Aim UI, much faster than MLFlow.</p>
+        </article>
+    </div>
+</main>
 
-    <footer>
-        <p>Brought to you by <a href="https://opensource.gresearch.co.uk" target="_blank">G-Research Open-Source</a>.
-        </p>
-    </footer>
+<footer>
+    <p>Brought to you by <a href="https://opensource.gresearch.co.uk" target="_blank">G-Research Open-Source</a>.
+    </p>
+</footer>
 </body>
 
 </html>
