--- a/pkg/ui/admin/embed/ns/create.html
+++ b/pkg/ui/admin/embed/ns/create.html
@@ -16,6 +16,7 @@
     </div>
     <div>	 
       <input type="submit" value="Create">
+      <input type="button" value="Cancel" onclick="namespaceIndex()">
     </div>
   </div>
 </form>
