--- a/pkg/ui/admin/embed/ns/update.html
+++ b/pkg/ui/admin/embed/ns/update.html
@@ -27,6 +27,7 @@
     </div>
     <div>	 
       <input type="submit" value="Save">
+      <input type="button" value="Cancel" onclick="namespaceIndex()">
     </div>
   </div>
 </form>
