use json response payload for XHRs, render message on redirect

--- a/pkg/ui/admin/embed/ns/create.html
+++ b/pkg/ui/admin/embed/ns/create.html
@@ -15,7 +15,7 @@
       <input type="text" id="description" name="description">
     </div>
     <div>	 
-      <input type="submit" value="Create">
+      <input type="submit" value="Save">
       <input type="button" value="Cancel" onclick="namespaceIndex()">
     </div>
   </div>
