Get chooser routes to serve assets

--- a/pkg/ui/chooser/embed/index.html
+++ b/pkg/ui/chooser/embed/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FastTrackML</title>
-    <link rel="stylesheet" href="/static/chooser/simple.min.css">
+    <link rel="stylesheet" href="/static/css/simple.min.css">
     <style>
         main {
             text-align: center;
