--- a/pkg/ui/chooser/embed/index.html
+++ b/pkg/ui/chooser/embed/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FastTrackML</title>
-    <link rel="stylesheet" href="/static/chooser/simple.min.css">
+    <link rel="stylesheet" href="/static/chooser/static/css/simple.min.css">
     <style>
         main {
             text-align: center;
@@ -17,17 +17,11 @@
             column-gap: 2rem;
         }
 
-        .logo {
-            height: 150px;
-            margin-top: -25px;
-            margin-bottom: -50px;
-        }
-
         #namespaces-list { 
-            overflow:auto;
-            height:20%;
-            list-style-type: none;
-        }
+             overflow:auto;
+             height:20%;
+             list-style-type: none;
+         }
     </style>
 </head>
 
@@ -37,48 +31,54 @@
     <p>A <i>very fast</i> experiment tracker</p>
 </header>
 
-    <!-- We load the UI with JS to avoid issues when an URL with embedded credentials is used -->
-    <main>
-        <p id="selected-namespace"></p>
-        <p>Which UI do you want to use?</p>
-        <div class="ui">
-            <article>
-                <a href="#" onclick="window.location = window.location.origin + '/mlflow/'"><button>Classic</button></a>
-                <p>This is the classic MLFlow UI, albeit fast and responsive.</p>
-            </article>
-            <article>
-                <a href="#" onclick="window.location = window.location.origin + '/aim/'"><button>Modern</button></a>
-                <p>This is the modern Aim UI, much faster than MLFlow.</p>
-            </article>
-        </div>
-        <ul id="namespaces-list">
-            {{ range .Data }}
-            <li>
-                <a href="#" onclick="window.location = (window.location.origin + {{if eq .code "default"}}'/'{{else}}'/ns/{{.code}}'{{end}});">{{.code}}</a>    
-            </li>
-            {{ end }}
-        </ul>
-    </main>
+<!-- We load the UI with JS to avoid issues when an URL with embedded credentials is used -->
+<main>
+    <p id="selected-namespace"></p>
+    <p>Which UI do you want to use?</p>
+    <div class="ui">
+        <article>
+            <a href="#"
+               onclick="window.location = window.location.origin + window.location.pathname + 'mlflow/'">
+                <button>Classic</button>
+            </a>
+            <p>This is the classic MLFlow UI, albeit fast and responsive.</p>
+        </article>
+        <article>
+            <a href="#"
+               onclick="window.location = window.location.origin + window.location.pathname + 'aim/'">
+                <button>Modern</button>
+            </a>
+            <p>This is the modern Aim UI, much faster than MLFlow.</p>
+        </article>
+    </div>
+    <ul id="namespaces-list">
+        {{ range .Data }}
+        <li>
+            <a href="#" onclick="window.location = (window.location.origin + {{if eq .Code "default"}}'/'{{else}}'/ns/{{.Code}}/'{{end}});">{{.Code}}</a>    
+        </li>
+        {{ end }}
+    </ul>
+</main>
 
-    <footer>
-        <p>Brought to you by <a href="https://opensource.gresearch.co.uk" target="_blank">G-Research Open-Source</a>.
-        </p>
-    </footer>
+<footer>
+    <p>Brought to you by <a href="https://opensource.gresearch.co.uk" target="_blank">G-Research Open-Source</a>.
+    </p>
+</footer>
 
-    <script>
-        function setCurrentNamespace() {
-            var currentUrl = window.location.href;
-            var namespaceIndex = currentUrl.indexOf('/ns/');
-            var namespaceText = document.getElementById('selected-namespace')
-            if (namespaceIndex !== -1) {
-                namespaceText.innerText = "Selected Namespace: " + currentUrl.substring(namespaceIndex + 4);
-            } else {
-                namespaceText.innerText = "Selected Namespace: default"
-            }
+<script>
+    function setCurrentNamespace() {
+        var currentUrl = window.location.href;
+        var namespaceIndex = currentUrl.indexOf('/ns/');
+        var namespaceText = document.getElementById('selected-namespace')
+        if (namespaceIndex !== -1) {
+            namespaceText.innerText = "Selected Namespace: " + currentUrl.substring(namespaceIndex + 4).slice(0, -1);
+        } else {
+            namespaceText.innerText = "Selected Namespace: default"
         }
+    }
 
-        window.onload = setCurrentNamespace;
-    </script>
+    window.onload = setCurrentNamespace;
+</script>
 </body>
 
 </html>
