--- a/pkg/ui/chooser/embed/index.html
+++ b/pkg/ui/chooser/embed/index.html
@@ -27,6 +27,11 @@
             margin-top: -25px;
             margin-bottom: -50px;
         }
+        #namespaces-list { 
+             overflow:auto;
+             height:20%;
+             list-style-type: none;
+         }
     </style>
 </head>
 
@@ -41,6 +46,7 @@
 
     <!-- We load the UI with JS to avoid issues when an URL with embedded credentials is used -->
     <main>
+        <p id="selected-namespace"></p>
         <p>Which UI do you want to use?</p>
         <div class="ui">
             <article>
@@ -56,12 +62,34 @@
                 <p>This is the modern Aim UI, much faster than MLFlow.</p>
             </article>
         </div>
+        <ul id="namespaces-list">
+            {{ range .Data }}
+            <li>
+                <a href="#" onclick="window.location = (window.location.origin + {{if eq .Code "default"}}'/'{{else}}'/ns/{{.Code}}/'{{end}});">{{.Code}}</a>    
+            </li>
+            {{ end }}
+        </ul>
     </main>
 
     <footer>
         <p>Brought to you by <a href="https://opensource.gresearch.co.uk" target="_blank">G-Research Open-Source</a>.
         </p>
     </footer>
+    
+    <script>
+        function setCurrentNamespace() {
+            var currentUrl = window.location.href;
+            var namespaceIndex = currentUrl.indexOf('/ns/');
+            var namespaceText = document.getElementById('selected-namespace')
+            if (namespaceIndex !== -1) {
+                namespaceText.innerText = "Selected Namespace: " + currentUrl.substring(namespaceIndex + 4).slice(0, -1);
+            } else {
+                namespaceText.innerText = "Selected Namespace: default"
+            }
+        }
+    
+        window.onload = setCurrentNamespace;
+    </script>
 </body>
 
 </html>
