--- a/pkg/ui/chooser/embed/index.html
+++ b/pkg/ui/chooser/embed/index.html
@@ -72,7 +72,7 @@
             {{ end }}
         </ul>
 
-	<p><a href="#" onclick="window.location = window.location.origin + '/admin/ns/'">Manage namespaces</a></p>
+	<p><a href="#" onclick="window.location = window.location.origin + '/admin/namespaces/'">Manage namespaces</a></p>
 
     </main>
 
