--- a/pkg/ui/admin/embed/namespaces/index.html
+++ b/pkg/ui/admin/embed/namespaces/index.html
@@ -15,7 +15,7 @@
     </tr>
   </thead>
   <tbody>
-    {{ range .Data }}
+    {{ range .Namespaces }}
     <tr>
       <td>{{ .Code }}</td>
       <td>{{ .Description }}</td>
