UI updates to better match project style

--- a/pkg/ui/admin/embed/namespaces/create.html
+++ b/pkg/ui/admin/embed/namespaces/create.html
@@ -1,23 +1,5 @@
 <h1>Create Namespace</h1>
 {{ template "partials/messages" . }}
 <form action="/admin/namespaces" method="post">
-  <div id="form-grid">
-    <div>
-      <label for="code">Code:</label>
-    </div>
-    <div>
-      <input type="text" id="code" name="code" required value="{{ .Namespace.Code }}">
-    </div>
-    <div>
-      <label for="description">Description:</label>
-    </div>
-    <div>
-      <input type="text" id="description" name="description" value="{{ .Namespace.Description }}">
-    </div>
-    <div>	 
-      <input type="submit" value="Save">
-      <input type="button" value="Cancel" onclick="namespaceIndex()">
-    </div>
-  </div>
+  {{ template "namespaces/form" . }}
 </form>
-
