--- a/pkg/ui/admin/embed/namespaces/update.html
+++ b/pkg/ui/admin/embed/namespaces/update.html
@@ -1,28 +1,11 @@
 <script type="text/javascript" language="javascript">
-  $( document ).ready(function() {
+  $(document).ready(function () {
     handleUpdateNamespace();
   });
 </script>
 <h1>Update Namespace</h1>
 {{ template "partials/messages" . }}
 <form action="#" method="post" id="updateForm">
-  <div id="form-grid">
-    <input type="hidden" id="id" name="id" readonly value="{{ .Namespace.ID }}">
-    <div>
-      <label for="code">Code:</label>
-    </div>
-    <div>
-      <input type="text" id="code" name="code" required value="{{ .Namespace.Code }}">
-    </div>
-    <div>
-      <label for="description">Description:</label>
-    </div>
-    <div>
-      <input type="text" id="description" name="description" value="{{ .Namespace.Description }}">
-    </div>
-    <div>	 
-      <input type="submit" value="Save">
-      <input type="button" value="Cancel" onclick="namespaceIndex()">
-    </div>
-  </div>
+  <input type="hidden" id="id" name="id" readonly value="{{ .Namespace.ID }}">
+  {{ template "namespaces/form" . }}
 </form>
