Add help text for namespace code constraints

--- a/pkg/ui/admin/embed/namespaces/form.html
+++ b/pkg/ui/admin/embed/namespaces/form.html
@@ -2,6 +2,7 @@
     <div id="form-fields">
         <div>
             <label for="code">* Code:</label>
+            <div class="help-text">Letters, numbers, underscore, and dash only. 2-12 characters.</div>
             <input type="text" id="code" name="code" required value="{{ .Namespace.Code }}">
         </div>
         <div>
