Admin namespace UI (#275)
Adds administrative UI module and support for namespace CRUD. 

Fixes #201

---------

Co-authored-by: Jonathan Giannuzzi <jonathan@giannuzzi.me>
Co-authored-by: dsuhinin <suhinin.dmitriy@gmail.com>
Co-authored-by: Software Developer <7852635+dsuhinin@users.noreply.github.com>

--- a/pkg/ui/chooser/embed/index.html
+++ b/pkg/ui/chooser/embed/index.html
@@ -63,6 +63,7 @@
                 <p>This is the modern Aim UI, much faster than MLFlow.</p>
             </article>
         </div>
+
         <ul id="namespaces-list">
             {{ range .Namespaces }}
             <li>
@@ -70,6 +71,9 @@
             </li>
             {{ end }}
         </ul>
+
+	<p><a href="#" onclick="window.location = window.location.origin + '/admin/namespaces/'">Manage namespaces</a></p>
+
     </main>
 
     <footer>
