--- a/pkg/ui/chooser/embed/index.html
+++ b/pkg/ui/chooser/embed/index.html
@@ -30,23 +30,17 @@
         }
         
         #namespaces-list { 
-             overflow:auto;
-             height:30%;
-             list-style-type: none;
-             padding: 0px;
-             border: 1px solid var(--border);
+            overflow:auto;
+            height:30%;
+            list-style-type: none;
+            border: 1px solid var(--border);
             border-radius: 5px;
             padding: 1rem;
          }
-         .selected-namespace {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
 
-        #current {
+        #current-namespace {
             text-align: center;
-            margin-right: 25px; /* Aggiungi la spaziatura desiderata tra #current e #current-icon */
+            margin-right: 25px;
         }   
 
         #current-icon {
@@ -86,7 +80,7 @@
         <ul id="namespaces-list">
             <li class="selected-namespace">
                 <i id="current-icon" class="Icon__container icon-long-arrow-right"></i>
-                <b id="current">{{.CurrentNamespace.Description}}</b>
+                <b id="current-namespace">{{.CurrentNamespace.Description}}</b>
             </li>
             {{ range .Namespaces }}
                 {{ if ne .Code $.CurrentNamespace.Code }}
